[package]
name = "stun"
version = "1.0.0"
authors = ["André Amado <andreamado1@gmail.com>"]
edition = "2018"
license = "CC-BY-4.0"


[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
clap = "3.2.23"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
glob = "0.3.0"
regex = "1.6.0"
toml = "0.5.9"
